[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Map/Region Hud/HUDBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/[labels] basis33(1).ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Map/Region Hud/bar_style2.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Map/Buttons/deploy_inactive.png" type="Texture" id=5]
[ext_resource path="res://Assets/Map/Buttons/deploy_active.png" type="Texture" id=6]
[ext_resource path="res://Assets/Map/Buttons/close_button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Map/Region Hud/bar_style.tres" type="StyleBox" id=8]
[ext_resource path="res://Scenes/Map/Region Huds/RegionHud.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/[labels] basis33.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 5
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 5
outline_color = Color( 0.686275, 0.635294, 0.635294, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="RegionHud" type="Node2D"]
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 562.0
margin_top = 144.0
margin_right = 2397.0
margin_bottom = 1296.0
rect_pivot_offset = Vector2( 917, 576 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1054.0
margin_top = 172.0
margin_right = 1906.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegionName" type="Label" parent="MarginContainer"]
margin_right = 852.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Bruh"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vaccines" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Vaccines"]
margin_left = 1862.0
margin_top = 347.0
margin_right = 2367.0
margin_bottom = 437.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="Vaccines/MarginContainer"]
margin_right = 505.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.952941, 0.945098, 0.945098, 1 )
custom_fonts/font = SubResource( 2 )
text = "Deployable"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Vaccines"]
margin_left = 1874.0
margin_top = 460.0
margin_right = 2362.0
margin_bottom = 1260.0
size_flags_stretch_ratio = 5.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VBoxContainer" parent="Vaccines/ScrollContainer"]
custom_constants/separation = 200

[node name="Region Info" type="Control" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Region Info"]
margin_left = 593.0
margin_top = 359.0
margin_right = 1137.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="Region Info/MarginContainer"]
margin_right = 544.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Statistics"
align = 1
valign = 1

[node name="ProgressBars" type="Control" parent="Region Info"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symptom" type="Control" parent="Region Info/ProgressBars"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Region Info/ProgressBars/Symptom"]
margin_left = 908.0
margin_top = 490.0
margin_right = 1658.0
margin_bottom = 575.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 4 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Region Info/ProgressBars/Symptom"]
margin_left = 654.0
margin_top = 510.0
margin_right = 810.0
margin_bottom = 556.0
custom_colors/font_color = Color( 0.721569, 0.47451, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "Fever"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symptom2" type="Control" parent="Region Info/ProgressBars"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar2" type="ProgressBar" parent="Region Info/ProgressBars/Symptom2"]
margin_left = 908.0
margin_top = 610.0
margin_right = 1658.0
margin_bottom = 695.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 4 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Region Info/ProgressBars/Symptom2"]
margin_left = 645.0
margin_top = 610.0
margin_right = 823.0
margin_bottom = 695.0
custom_colors/font_color = Color( 0.721569, 0.47451, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "body Aches and pains"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symptom3" type="Control" parent="Region Info/ProgressBars"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar3" type="ProgressBar" parent="Region Info/ProgressBars/Symptom3"]
margin_left = 908.0
margin_top = 730.0
margin_right = 1658.0
margin_bottom = 815.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 4 )
value = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Region Info/ProgressBars/Symptom3"]
margin_left = 609.0
margin_top = 750.0
margin_right = 853.0
margin_bottom = 796.0
custom_colors/font_color = Color( 0.721569, 0.47451, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "Breathlessness"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symptom4" type="Control" parent="Region Info/ProgressBars"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar4" type="ProgressBar" parent="Region Info/ProgressBars/Symptom4"]
margin_left = 908.0
margin_top = 850.0
margin_right = 1658.0
margin_bottom = 935.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 4 )
value = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Region Info/ProgressBars/Symptom4"]
margin_left = 660.0
margin_top = 870.0
margin_right = 816.0
margin_bottom = 916.0
custom_colors/font_color = Color( 0.721569, 0.47451, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "tiredness"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symptom5" type="Control" parent="Region Info/ProgressBars"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar5" type="ProgressBar" parent="Region Info/ProgressBars/Symptom5"]
margin_left = 908.0
margin_top = 970.0
margin_right = 1658.0
margin_bottom = 1055.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 4 )
value = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Region Info/ProgressBars/Symptom5"]
margin_left = 661.0
margin_top = 990.0
margin_right = 817.0
margin_bottom = 1036.0
custom_colors/font_color = Color( 0.721569, 0.47451, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "Coughing"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeployButton" type="TextureButton" parent="Buttons"]
margin_left = 956.0
margin_top = 1090.0
margin_right = 1356.0
margin_bottom = 1266.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Buttons"]
margin_left = 2240.0
margin_top = 179.0
margin_right = 2359.0
margin_bottom = 298.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/DeployButton" to="." method="_on_DeployButton_pressed"]
[connection signal="pressed" from="Buttons/CloseButton" to="." method="_on_CloseButton_pressed"]
